- Added the Form ID to the entry meta labels.
- Fixed an issue with the capabilities required to view the parent and child entry metaboxes.
- Updated Members 2.0 integration to use human readable labels for the capabilities. Requires Gravity Flow 1.8.1 or greater.